test/errors/type/io/read3.yasl
let f = io.open('test/unit_tests/test_vm/sample.txt')

mt.lookup(f, .read)(f, false)
